[tool.poetry]
name = "dbt-models-explorer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dbt_models_explorer"}]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
rich = "^12.5.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dbt-models-explorer = 'dbt_models_explorer.__main__:main'